--- a/index.html
+++ b/index.html
@@ -5,7 +5,108 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Analyseur de Bulletins de Salaire</title>
   <style>
-    /* Styles inchangés */
+    :root {
+      --primary-color: #1a73e8;
+      --error-color: #d32f2f;
+      --success-color: #2e7d32;
+    }
+    body {
+      font-family: 'Segoe UI', system-ui, sans-serif;
+      margin: 20px;
+      line-height: 1.6;
+      background: #f5f7fa;
+    }
+    .container {
+      max-width: 1000px;
+      margin: 2rem auto;
+      padding: 2rem;
+      box-shadow: 0 2px 15px rgba(0,0,0,0.1);
+      border-radius: 12px;
+      background: white;
+    }
+    h1 {
+      text-align: center;
+      color: var(--primary-color);
+      margin-bottom: 2rem;
+    }
+    .upload-section {
+      border: 2px dashed #ccc;
+      padding: 2rem;
+      text-align: center;
+      margin-bottom: 2rem;
+      position: relative;
+      background: #f8f9fa;
+    }
+    .form-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 1.5rem;
+      margin: 2rem 0;
+    }
+    .input-group {
+      position: relative;
+    }
+    label {
+      display: block;
+      margin-bottom: 0.5rem;
+      font-weight: 500;
+      color: #444;
+    }
+    input {
+      width: 80%;
+      padding: 0.8rem;
+      border: 1px solid #ddd;
+      border-radius: 6px;
+      font-size: 1rem;
+      transition: border-color 0.3s ease;
+      background: #fff;
+    }
+    input:focus {
+      outline: none;
+      border-color: var(--primary-color);
+      box-shadow: 0 0 0 2px rgba(26,115,232,0.2);
+    }
+    button {
+      background: var(--primary-color);
+      color: white;
+      border: none;
+      padding: 1rem 2rem;
+      border-radius: 6px;
+      cursor: pointer;
+      font-size: 1rem;
+      transition: transform 0.2s, background 0.3s;
+      margin: 0.5rem;
+    }
+    .resultats {
+      margin-top: 2rem;
+      padding: 1.5rem;
+      background: #f8f9fa;
+      border-radius: 8px;
+    }
+    .result-item {
+      display: flex;
+      justify-content: space-between;
+      margin: 1rem 0;
+      padding: 1rem;
+      background: white;
+      border-radius: 6px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.05);
+    }
+    .loading {
+      display: none;
+      text-align: center;
+      padding: 1rem;
+      color: var(--primary-color);
+    }
+    .error {
+      color: var(--error-color);
+      padding: 1rem;
+      background: #ffebee;
+      margin: 1rem 0;
+      border-radius: 6px;
+      display: none;
+    } 
+  
   </style>
 </head>
 <body>
@@ -81,7 +182,7 @@
       cotisationsPatronales: /TOTAL\s+PAT\s*RONAL\s+(\d+\.\d+)/i,
       csgDeductible: /CSG\s+déductible\s+(\d+\.\d+)/i,
       csgNonDeductible: /CSG\/CRDS\s+non\s+déductible\s+(\d+\.\d+)/i,
-      congesPayes: /CONGÉS\s+PAYÉS\(10%\)\s+10%\s+(\d+\.\d+)/i // Regex ajustée
+      congesPayes: /CONGÉS\s+PAYÉS\(10%\)\s+10%\s+(\d+\.\d+)/i
     };
 
     async function extractPDFData(file) {
