--- a/index.html
+++ b/index.html
@@ -9,63 +9,91 @@
       --primary-color: #1a73e8;
       --error-color: #d32f2f;
       --success-color: #2e7d32;
+      --bg-color: #ffffff;
+      --text-color: #333333;
+      --border-color: #dddddd;
+      --container-bg: #f5f7fa;
     }
+
+    /* Mode sombre */
+    [data-theme="dark"] {
+      --primary-color: #bb86fc;
+      --error-color: #cf6679;
+      --success-color: #00c853;
+      --bg-color: #121212;
+      --text-color: #e0e0e0;
+      --border-color: #424242;
+      --container-bg: #1e1e1e;
+    }
+
     body {
       font-family: 'Segoe UI', system-ui, sans-serif;
       margin: 20px;
       line-height: 1.6;
-      background: #f5f7fa;
+      background: var(--container-bg);
+      color: var(--text-color);
+      transition: background 0.3s ease, color 0.3s ease;
     }
+
     .container {
       max-width: 1000px;
       margin: 2rem auto;
       padding: 2rem;
-      box-shadow: 0 2px 15px rgba(0,0,0,0.1);
+      box-shadow: 0 2px 15px rgba(0, 0, 0, 0.1);
       border-radius: 12px;
-      background: white;
+      background: var(--bg-color);
     }
+
     h1 {
       text-align: center;
       color: var(--primary-color);
       margin-bottom: 2rem;
     }
+
     .upload-section {
-      border: 2px dashed #ccc;
+      border: 2px dashed var(--border-color);
       padding: 2rem;
       text-align: center;
       margin-bottom: 2rem;
       position: relative;
-      background: #f8f9fa;
+      background: var(--container-bg);
     }
+
     .form-grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
       gap: 1.5rem;
       margin: 2rem 0;
     }
+
     .input-group {
       position: relative;
     }
+
     label {
       display: block;
       margin-bottom: 0.5rem;
       font-weight: 500;
-      color: #444;
+      color: var(--text-color);
     }
+
     input {
       width: 80%;
       padding: 0.8rem;
-      border: 1px solid #ddd;
+      border: 1px solid var(--border-color);
       border-radius: 6px;
       font-size: 1rem;
       transition: border-color 0.3s ease;
-      background: #fff;
+      background: var(--bg-color);
+      color: var(--text-color);
     }
+
     input:focus {
       outline: none;
       border-color: var(--primary-color);
-      box-shadow: 0 0 0 2px rgba(26,115,232,0.2);
+      box-shadow: 0 0 0 2px rgba(26, 115, 232, 0.2);
     }
+
     button {
       background: var(--primary-color);
       color: white;
@@ -77,27 +105,31 @@
       transition: transform 0.2s, background 0.3s;
       margin: 0.5rem;
     }
+
     .resultats {
       margin-top: 2rem;
       padding: 1.5rem;
-      background: #f8f9fa;
+      background: var(--container-bg);
       border-radius: 8px;
     }
+
     .result-item {
       display: flex;
       justify-content: space-between;
       margin: 1rem 0;
       padding: 1rem;
-      background: white;
+      background: var(--bg-color);
       border-radius: 6px;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.05);
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
     }
+
     .loading {
       display: none;
       text-align: center;
       padding: 1rem;
       color: var(--primary-color);
     }
+
     .error {
       color: var(--error-color);
       padding: 1rem;
@@ -105,11 +137,21 @@
       margin: 1rem 0;
       border-radius: 6px;
       display: none;
-    } 
-  
+    }
+
+    /* Bouton mode sombre */
+    .theme-toggle {
+      position: fixed;
+      top: 1rem;
+      right: 1rem;
+      z-index: 1000;
+    }
   </style>
 </head>
 <body>
+  <!-- Bouton de basculement du mode sombre -->
+  <button class="theme-toggle" id="themeToggle">🌙 Mode sombre</button>
+
   <div class="container">
     <h1>Analyseur Intelligent de Bulletins de Salaire</h1>
     <div class="upload-section">
@@ -173,6 +215,7 @@
       </div>
     </div>
   </div>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.11.338/pdf.min.js"></script>
   <script>
     const fieldMappings = {
@@ -214,7 +257,6 @@
           .replace(/\s+/g, ' ') // Supprime les espaces multiples
           .replace(/,/g, '.')  // Remplace les virgules par des points
           .trim();
-
         for (const [field, regex] of Object.entries(fieldMappings)) {
           const match = cleanText.match(regex);
           if (match && match[1]) {
@@ -222,7 +264,6 @@
             document.getElementById(field).value = value.toFixed(2);
           }
         }
-
         calculateMonthlyAndAnnualValues();
       } catch (error) {
         showError('Erreur de traitement des données');
@@ -270,19 +311,23 @@
     function showLoading() {
       document.getElementById('loading').style.display = 'block';
     }
+
     function hideLoading() {
       document.getElementById('loading').style.display = 'none';
     }
+
     function showError(message) {
       const errorDiv = document.getElementById('fileError');
       errorDiv.textContent = message;
       errorDiv.style.display = 'block';
       setTimeout(() => errorDiv.style.display = 'none', 5000);
     }
+
     function resetUI() {
       document.querySelectorAll('input').forEach(input => input.value = '');
       document.querySelectorAll('.result-item strong').forEach(el => el.textContent = '0,00 €');
     }
+
     function updateFileName(name) {
       document.getElementById('fileName').textContent = name;
       document.getElementById('pdfPreviewText').style.display = 'block';
@@ -291,6 +336,15 @@
     // Événements
     document.getElementById('pdfInput').addEventListener('change', (e) => {
       if (e.target.files[0]) extractPDFData(e.target.files[0]);
+    });
+
+    // Mode sombre
+    const themeToggle = document.getElementById('themeToggle');
+    themeToggle.addEventListener('click', () => {
+      const currentTheme = document.documentElement.getAttribute('data-theme');
+      const newTheme = currentTheme === 'dark' ? 'light' : 'dark';
+      document.documentElement.setAttribute('data-theme', newTheme);
+      themeToggle.textContent = newTheme === 'dark' ? '☀️ Mode clair' : '🌙 Mode sombre';
     });
   </script>
 </body>
